# metal-raytracer

./: .gitignore  AGENTS.md  CMakeLists.txt
shaders/: Shaders.metal
src/: AppDelegate.h  AppDelegate.m  Renderer.h  Renderer.m  SharedTypes.h  main.m
tests/: CubeTests.m  CylinderTests.m  GroupTests.m  IntersectionTests.m  LightingTests.m  MatrixTests.m  PatternTests.m  PlaneTests.m  ReflectionRefractionTests.m  ShadowTests.m  TransformationTests.m  TupleTests.m  VectorTests.m  WorldTests.m  main.m
